# quickurl

./: APPLE_SILICON_FIX.md  CROSS_COMPILE.md  Cargo.toml  Cross.toml  FIX_NOW.md  IMPLEMENTATION_SUMMARY.md  Makefile  PERFORMANCE_IMPROVEMENT.md  QUICKSTART.md  README-RUST.md  README.md
.github/workflows/: ci.yml  release.yml
examples/: batch-config.yaml  endpoints.txt  mock-server.yaml
src/: batch.rs  cli.rs  curl_parser.rs  engine.rs  http_client.rs  main.rs  mock_server.rs  stats.rs  template.rs  ui.rs
