[package]
name = "quickurl"
version = "0.1.0"
edition = "2021"
authors = ["quickurl contributors"]
description = "A modern, high-performance HTTP benchmarking tool inspired by wrk with curl command parsing support"
license = "MIT"
repository = "https://github.com/antlabs/quickurl"
homepage = "https://github.com/antlabs/quickurl"
documentation = "https://github.com/antlabs/quickurl"
readme = "README.md"
keywords = ["http", "benchmark", "performance", "load-testing", "curl"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "quickurl"
path = "src/main.rs"

[dependencies]
# HTTP client - 使用底层库重构
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http2"] }
tokio = { version = "1.35", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"
tower = { version = "0.4", features = ["util"] }

# TLS support
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.7"

# DNS resolver
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# HTTP/3 support (optional)
# h3 = "0.0.4"
# h3-quinn = "0.0.5"

# 保留 reqwest 作为备选（可选）
reqwest = { version = "0.11", features = ["json"], optional = true }

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Statistics
hdrhistogram = "7.5"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
regex = "1.10"
lazy_static = "1.4"
url = "2.5"
num_cpus = "1.16"

# Async runtime
futures = "0.3"
async-trait = "0.1"
kanal = "0.1.0-pre8"

# Terminal UI
crossterm = "0.27"
ratatui = "0.25"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Encoding
base64 = "0.21"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"           # 更激进的 LTO
codegen-units = 1     # 单个代码生成单元，最大化优化
strip = true          # 移除符号表，减小二进制大小
panic = "abort"       # panic 时直接 abort，减少代码大小
overflow-checks = false  # 禁用溢出检查，提升性能
